Fixed the problem of not showing User-Chart-Status

--- a/packages/web/src/css/style.css
+++ b/packages/web/src/css/style.css
@@ -76,6 +76,7 @@ body {
 }
 .User-Chart-Status {
   width: 15px;
+  margin-left: 7px;
 }
 .Separator {
   display: flex;
